<resources>
    <string name="android_version_name">WISNUC V%1$s</string>
    <string name="android_finishAppToast">Please click BACK again to exit</string>
    <string name="and">&#160;and&#160;</string>
    <string name="android_yesterday">yesterday</string>
    <string name="android_share_album_title">%1$s·%2$s %3$s</string>
    <string name="android_share_count">Share %1$s %2$s</string>
    <string name="android_share_comment_text">%1$s : %2$s</string>
    <string name="photo">Photos</string>
    <string name="file"> file</string>
    <plurals name="minute">

        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>

    </plurals>
    <plurals name="hour">

        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>

    </plurals>
    <string name="android_ellipsize">…</string>
    <string name="android_no_write_external_storage_permission">Written permission denied in SDCard.</string>
    <string name="app_name">WISNUC</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="finish_text">Done</string>
    <string name="choose_text">Select</string>
    <string name="delete_text">Delete</string>
    <string name="loading">Loading…</string>
    <string name="add_text">Add</string>
    <string name="no_photos">Photos is empty</string>
    <string name="no_media_shares">No Media Shares</string>
    <string name="no_albums">No Albums</string>
    <string name="no_files">Folder is empty</string>
    <string name="no_file_shares">No File Shares</string>
    <string name="operating_title">%1$s,Please wait…</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="cancel">Cancel</string>
    <string name="clear_select_item">Clean selection</string>
    <string name="clear">Erase</string>
    <string name="backup">Backup</string>
    <string name="wisnuc_server">WISNUC</string>
    <string name="need_auto_upload">Do you want to backup photos to %1$s?</string>
    <string name="photo_auto_upload_already_close">Photo Backup is off, to turn on in \'Setting\'.</string>
    <string name="no_photo">Gallery is empty</string>
    <string name="send">Send</string>
    <string name="getting_backup_progress">Preparing to backup…</string>
    <string name="select_count">%1$d Selected</string>
    <string name="person_data">Biography</string>
    <string name="user_manage">Users</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="my_file">My Files</string>
    <string name="my_photo">My Photos</string>
    <string name="transmission_manage">Transfers</string>
    <string name="account_manage">Account</string>
    <string name="main_menu">Main Menu</string>
    <string name="already_upload_media_percent_text">Backup %1$s</string>
    <string name="already_upload_finished">Backup Completed</string>
    <string name="change_user">%1$s is logging</string>
    <string name="all_people">All users</string>
    <string name="other_app">Other apps</string>
    <string name="login">Login</string>
    <string name="password_error">Password is incorrect, Try again.</string>
    <string name="password_text">Password</string>
    <string name="cancel_login">Cancel Login</string>
    <string name="album">Album</string>
    <string name="album_item_title">Untitled album %1$s</string>
    <string name="private_text">Private</string>
    <string name="share_text">Shares</string>
    <string name="share_verb">Share</string>
    <string name="unknown_time">Unknown Time</string>
    <string name="select_photo">Select Photos</string>
    <string name="download_original_photo">Download full size photo</string>
    <string name="download_original_photo_fail">Can not download full size photo.</string>
    <string name="check_more_photos">Check more photos</string>
    <string name="create_share">Create share</string>
    <string name="new_album">New Album</string>
    <string name="create_album">Create Album</string>
    <string name="set_maintainer">Set Maintainer</string>
    <string name="description">Description</string>
    <string name="set_private">Unshare</string>
    <string name="set_public">Share</string>
    <string name="set_album">Album Setting</string>
    <string name="edit_photo">Edit Photos</string>
    <string name="delete_album">Delete Album</string>
    <string name="ws215i">ws215i</string>
    <string name="user">User</string>
    <string name="virtual_machine">Virtual Machine</string>
    <string name="unknown_equipment_label">Unknown</string>
    <string name="search_equipment">Search WISNUC Device</string>
    <string name="equipment_not_found">Device not found</string>
    <string name="search_equipment_failed">Device Searching failed</string>
    <string name="enter_ip">Please enter IP address</string>
    <string name="ip_illegal">IP invalid.</string>
    <string name="comment">Comment</string>
    <string name="send_comment_hint">Say something here…</string>
    <string name="no_user">No User</string>
    <string name="super_admin">super administrator</string>
    <string name="admin">admin</string>
    <string name="ordinary_user">ordinary user</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="disabled">Disabled</string>
    <string name="wechat_unbounded">WeChat unbounded</string>
    <string name="wechat_bounded">WeChat has been bound</string>
    <string name="modify_user_operation">Modify user operation</string>
    <string name="setting_text">Setting</string>
    <string name="photo_auto_upload_setting_text">Auto backup</string>
    <string name="only_auto_upload_when_connect_with_wifi">Wi-Fi Only</string>
    <string name="clear_cache">Clean up temporary files</string>
    <string name="already_upload_media_count_hint">Backups / Total Photos</string>
    <string name="already_upload_media_count_text">%1$d/%2$d</string>
    <string name="confirm_clear_cache">All temporary files will be erased.</string>
    <string name="calculating">Calculating</string>
    <string name="how_to_handle_bt_file">BT files from the other applications</string>
    <string name="ask_everytime">Ask every time</string>
    <string name="service_manage">Service Manage</string>
    <string name="ask_if_new_firmware_version_occur">Ask if there is a new version of firmware</string>
    <string name="new_firmware_version_dialog_title">A new version of the device system can be upgraded</string>
    <string name="no_longer_prompt">No longer prompt</string>
    <string name="to_upgrade">To upgrade</string>
    <string name="samba_service">Samba</string>
    <string name="dlna_service">miniDLNA</string>
    <string name="bt_download_service">BT Download</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="bt_download_service_stopped">BT download service stopped</string>
    <string name="user_name">User Name</string>
    <string name="confirm_user_password">Confirm Password</string>
    <string name="create_user">Create User</string>
    <string name="username_not_unique">User name is exist.</string>
    <string name="empty_username">Please enter username</string>
    <string name="username_has_illegal_character">User name cantains invalid character</string>
    <string name="empty_password">Please enter password</string>
    <string name="not_same_password">These passwords don\'t match.</string>
    <string name="password_has_illegal_character">Passwords contain invalid character.</string>
    <string name="files">Files</string>
    <string name="download">Download</string>
    <string name="select_file">Select Files</string>
    <string name="download_select_item">Download selection</string>
    <string name="download_the_item">Download the item</string>
    <string name="open_the_item">Open</string>
    <string name="re_download_the_item">Download again</string>
    <string name="need_download_and_cover_original_file">%1$s.fileext will be overwrite.</string>
    <string name="cover">Cover</string>
    <string name="delete_original_file_fail">%1$s.fileext cannot be overwrite.</string>
    <string name="shared_drive">Shared Drive</string>
    <string name="built_in_drive">Public Drive</string>
    <string name="file_not_exist">File Not Exist</string>
    <string name="downloading">Downloading</string>
    <string name="no_download_record">No download record</string>
    <string name="completed">Completed</string>
    <string name="incomplete">Running</string>
    <string name="upload">Upload</string>
    <string name="waiting_for_download">Wait for download</string>
    <string name="waiting_for_upload">Wait for upload</string>
    <string name="success">%1$s succeeded</string>
    <string name="fail">%1$s failed</string>
    <string name="local_media_share_uploading">Sorry,it is uploading,please wait!</string>
    <string name="network_exception">Network exception,error code：%1$s</string>
    <string name="server_exception">Server exception,error code：%1$s</string>
    <string name="connnect_server_fail">Server offline</string>
    <string name="no_network">Contect internet failed. Pelease check your network.</string>
    <string name="socket_timeout_exception">Socket Timeout Exception</string>
    <string name="no_operate_media_share_permission">you do not own this album.</string>
    <string name="already_select_media">Sorry,the photo has been selected</string>
    <string name="photo_not_sharing">You do not own this photo.</string>
    <string name="open_file_failed">No apps supports this file.</string>
    <string name="no_enough_space">No enough space</string>
    <string name="max_select_photo">An album could not contains more than 1000 photos.</string>
    <string name="errcode_success">Send succeed</string>
    <string name="errcode_cancel">Send cancel</string>
    <string name="errcode_deny">Send denied</string>
    <string name="errcode_unsupported">UnSupported Error</string>
    <string name="errcode_unknown">UnKnown Error</string>
    <string name="no_binding_user_in_nas">No binding user in nas</string>
    <string name="binding_user_station_offline">The device in which the user is bound is offline</string>
    <string name="select_one_winsuc">Select one wisnuc</string>
    <string name="on_equipment">On %1$s</string>
    <string name="wechat_login">WeChat Login</string>
    <string name="equipment_manage">Station</string>
    <string name="equipment">Device</string>
    <string name="network">Network</string>
    <string name="time">Time</string>
    <string name="reboot_shutdown">Reboot or Poweroff</string>
    <string name="reboot">Reboot</string>
    <string name="shutdown">Poweroff</string>
    <string name="logout">Logout</string>
    <string name="mode">Mode</string>
    <string name="create_new_download_task">Create new download task</string>
    <string name="upload_file_to_wisnuc">Upload file to WISNUC</string>
    <string name="always">Always</string>
    <string name="wisnuc_system_manage">WISNUC System Manage</string>
    <string name="reinstall_wisnuc">Reinstall WISNUC</string>
    <string name="force_start">Forced to start</string>
    <string name="got_it">Got it</string>
    <string name="select_volume_hint">It is found that other devices have been diskette, and I want to use:</string>
    <string name="reinitialization">No, I want to re initialize</string>
    <string name="lost_disk">Lost Disk</string>
    <string name="disk_loss_reason_one">·Maybe the disk socket is loose. Please turn off the disk and re insert it</string>
    <string name="disk_loss_reason_two">·Also possible disk damage</string>
    <string name="continue_to_use">Continue to use</string>
    <string name="repair">Repair</string>
    <string name="single">SINGLE</string>
</resources>