<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/equipment_detail_title"
        layout="@layout/equipment_detail_title" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:gravity="center_vertical"
        android:text="@string/select_volume_hint"
        android:textColor="@color/fifty_four_percent_black"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipment_detail_title" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <Button
        android:id="@+id/button6"
        style="@style/NoPaddingButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/white_btn_bg"
        android:text="@string/reinitialization"
        android:textColor="@color/fifty_four_percent_black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        style="@style/NoPaddingButton"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/white_btn_bg"
        android:text="@string/got_it"
        android:textColor="@color/new_design_primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button8"
        style="@style/NoPaddingButton"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/white_btn_bg"
        android:text="@string/cancel"
        android:textColor="@color/new_design_primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7" />


</android.support.constraint.ConstraintLayout>